# ecommerce_data_pipeline

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  prompts.md  pyproject.toml  technical_challenge.md
.github/workflows/: ci.yml
docs/: data_architecture.md  data_architecture_design_prompt.md  structured_prompt.md
gx/gx/: great_expectations.yml
gx/gx/expectations/: .ge_store_backend_id
sql/: schema.sql
src/api/: deps.py  main.py  schemas.py
src/api/routers/: customers.py  data_quality.py  error_events.py  metrics.py  orders.py
src/common/: config.py  data_quality.py  db.py  exchange_rate_client.py  logging.py
src/pipeline/: enrich_exchange_rates.py  ingest_customers.py  ingest_events.py  ingest_orders.py  load_warehouse.py  run.py
tests/: conftest.py
tests/integration/: test_api.py  test_pipeline_end_to_end.py
tests/unit/: test_exchange_rate_client.py  test_expectation_suites.py  test_ingest_customers.py  test_ingest_events.py  test_ingest_orders.py  test_load_warehouse.py
validations/: customers.json  events.json  exchange_rates.json  orders_clean.json
